--- a/src/components/Navbar.astro
+++ b/src/components/Navbar.astro
@@ -4,14 +4,14 @@ import logo from '../assets/img/logo.png';
 
 const navItems = [
   { href: '/', label: 'Inicio' },
-  { href: '/servicios', label: 'Servicios' },
+  { href: '/servicios-comercio-exterior', label: 'Servicios' },
   { href: '/nosotros', label: 'Nosotros' },
   { href: '/contacto', label: 'Contacto' },
 ];
 
 const carouselItems = [
   { icon: '🚀', text: 'Bienvenidos a Conecta Internacional' },
-  { icon: '📞', text: 'Llámanos al +56 2 2345 6789' },
+  { icon: '📞', text: 'Llámanos al +56 9 5335 2667' },
   { icon: '📧', text: 'Escríbenos a contacto@conecta.com' }
 ];
 ---
