--- a/src/components/ServiciosHome.astro
+++ b/src/components/ServiciosHome.astro
@@ -61,7 +61,7 @@ const services = [
 
     <!-- Botón de "Ver Servicios" -->
     <div class="text-center mt-5">
-      <a class="banner-button" href="servicios">Ver servicios</a>
+      <a class="banner-button" href="servicios-comercio-exterior">Ver servicios</a>
     </div>
   </div>
 </section>
