--- a/src/pages/contacto.astro
+++ b/src/pages/contacto.astro
@@ -3,9 +3,11 @@ import Layout from '../layouts/Layout.astro';
 import Contacto from '../components/Contacto.astro';
 
 const title = "Contacto - Conecta Internacional";
+const description = "Ponte en contacto con Conecta Internacional, tu aliado emergente en comercio exterior. Descubre soluciones personalizadas para impulsar tu negocio en el mercado global.";
+
 ---
 
-<Layout title={title}>
+<Layout title={title} description={description}>
 
     <!-- Hero Section: Página de contacto-->
     <section class="intro-section py-5 bg-light text-white d-flex align-items-center justify-content-center" style="min-height: 70vh;">
@@ -34,7 +36,7 @@ const title = "Contacto - Conecta Internacional";
             <div class="card-body text-center">
               <i class="bi bi-telephone fs-1 text-primary mb-3"></i>
               <h3 class="card-title h5 fw-bold">Teléfono</h3>
-              <p class="card-text">+1 234 567 890</p>
+              <p class="card-text">+56 9 5335 2667</p>
             </div>
           </div>
         </div>
