--- a/src/components/WhatsappFlotante.astro
+++ b/src/components/WhatsappFlotante.astro
@@ -1,6 +1,6 @@
 ---
 // Importamos el ícono de WhatsApp o podemos usar un enlace con una imagen.
-const whatsappLink = "https://wa.me/11234567890?text=¡Hola!%20Tengo%20una%20consulta.";
+const whatsappLink = "https://wa.me/+56953352667?text=¡Hola!%20Tengo%20una%20consulta.";
 ---
 
 <a href={whatsappLink} target="_blank" class="whatsapp-float" aria-label="Chat en WhatsApp">
