--- a/src/pages/nosotros.astro
+++ b/src/pages/nosotros.astro
@@ -2,9 +2,10 @@
 import Layout from '../layouts/Layout.astro';
 import NosotrosImage from "../assets/img/comercio-exterior.webp"
 const title = "Nosotros - Conecta Internacional";
+const description = "Conecta Internacional es tu aliado estratégico en comercio exterior.Ofrecemos asesoría experta en importaciones, exportaciones y logística global."
 ---
 
-<Layout title={title}>
+<Layout title={title} description={description}>
   
     <!-- Hero Section: Página de nosotros-->
     <section class="intro-section py-5 bg-light text-white d-flex align-items-center justify-content-center" style="min-height: 70vh;">
@@ -21,7 +22,7 @@ const title = "Nosotros - Conecta Internacional";
       <div class="row align-items-center">
         <div class="col-md-6">
           <h2 class="fw-bold mb-3">Nosotros</h2>
-          <p>
+          <p style="text-align: justify;">
             Somos un grupo de profesionales que, desde hace más de 15 años, nos dedicamos a las áreas de ventas, administración y comercio internacional. Contamos con una amplia red de contactos en estas áreas, lo que nos permite ayudarte a optimizar los servicios de tu empresa.
           </p>
         </div>
@@ -39,13 +40,13 @@ const title = "Nosotros - Conecta Internacional";
   <section class="py-5">
     <div class="container">
       <div class="row align-items-center">
-        <div class="col-md-6 mb-4 mb-md-0">
+        <div class="col-md-6 mb-4 mb-md-0" >
           <h3 class="fw-bold mb-3">Nuestra Misión</h3>
-          <p>Conectar a las personas y empresas del mundo a través de soluciones tecnológicas innovadoras que faciliten la comunicación global.</p>
+          <p style="text-align: justify;">Conectar a las personas y empresas del mundo a través de soluciones tecnológicas innovadoras que faciliten la comunicación global.</p>
         </div>
         <div class="col-md-6 mb-4 mb-md-0">
           <h3 class="fw-bold mb-3">Nuestra Visión</h3>
-          <p>Convertirnos en la empresa líder de telecomunicaciones globales, destacando por nuestra capacidad de innovación y el compromiso con la excelencia.</p>
+          <p style="text-align: justify;">Convertirnos en la empresa líder de telecomunicaciones globales, destacando por nuestra capacidad de innovación y el compromiso con la excelencia.</p>
         </div>
       </div>
     </div>
