--- a/src/pages/servicios-comercio-exterior.astro
+++ b/src/pages/servicios-comercio-exterior.astro
@@ -6,13 +6,11 @@ import Externalizacion from '../assets/img/busqueda-externalizacion.jpg';
 import HeroBackground from '../assets/img/hero-background.jpg'; // Importa la imagen de fondo
 import Layout from '../layouts/Layout.astro';
 
-interface Props {
-  title?: string;
-}
+const title = "Conecta Internacional - Servicios de Comercio Exterior";
+const description= "Descubre nuestras soluciones integrales en comercio exterior: Búsqueda de Proveedores, Búsqueda de Transportes, Asesoría en Internación y Externalización. Optimiza tu cadena de suministro, mejora la logística internacional y potencia tus operaciones de importación y exportación, conectando tu negocio con el comercio global y asegurando el cumplimiento en aduanas e impuestos internacionales.";
 
-const { title = "Servicios - Conecta Internacional" } = Astro.props;
 ---
-<Layout title={title}> 
+<Layout title={title} description={description}> 
   <body>
     <main>
       <!-- Hero Section: Página de Servicios -->
