--- a/src/components/Contacto.astro
+++ b/src/components/Contacto.astro
@@ -233,7 +233,7 @@
       };
 
       try {
-        const response = await fetch('https://conectainternacional.cl/contacto', {
+        const response = await fetch('https://conectainternacional.cl/contact', {
           method: 'POST',
           headers: {
             'Content-Type': 'application/json'
