--- a/src/components/Contacto.astro
+++ b/src/components/Contacto.astro
@@ -228,7 +228,7 @@
 
       try {
         // Cambia la URL para producción
-        const response = await fetch('https://conectainternacional.cl/contacto/contact', {
+        const response = await fetch('/contacto/contact', {
           method: 'POST',
           headers: {
             'Content-Type': 'application/json'
