--- a/src/components/Contacto.astro
+++ b/src/components/Contacto.astro
@@ -247,7 +247,7 @@
 
       try {
         // Cambia la URL para producción
-        const response = await fetch(import.meta.env.PUBLIC_API_URL, {
+        const response = await fetch('https://conectainternacional.cl/api/contacto/contact', {
           method: "POST",
           headers: {
             "Content-Type": "application/json",
